--- a/src/style.css
+++ b/src/style.css
@@ -75,19 +75,27 @@ svg {
   vertical-align: middle;
   position: absolute;
   z-index: 1;
-  transition-property: left, top,
-    -ms-transform, -webkit-transform, transform;
+  transition-property: left, top
   transition-duration: 0ms;
   transition-timing-function: linear;
+  -webkit-animation: entrance 120ms linear;
+  animation: entrance 120ms linear;
 }
 
-.tile.new {
-  -ms-transform: scale(0.5);
-  -ms-transform-origin: center;
-  -webkit-transform: scale(0.5);
-  -webkit-transform-origin: center;
-  transform: scale(0.5);
-  transform-origin: center;
+@-webkit-keyframes entrance {
+  0% {
+    -webkit-transform: scale(0.5);
+    -webkit-transform-origin: center;
+  }
+}
+
+@keyframes entrance {
+  0% {
+    -ms-transform: scale(0.5);
+    -ms-transform-origin: center;
+    transform: scale(0.5);
+    transform-origin: center;
+  }
 }
 
 .small-font {
