Put an anchor to my Github repo on header, Included CSS reset

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,59 @@
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* CSS reset ends*/
+
+a {
+  color: inherit;
+  text-decoration: inherit;
+}
+
 body {
   background-color: #BBADA0;
   color: white;
@@ -12,12 +68,23 @@ header {
   text-align: left;
 }
 
-h1, h4, p {
-  margin: 0;
+h1 {
+  margin: 5px;
+  font-size: 2em;
+  font-weight: bold;
+}
+
+h4 {
+  font-size: 1.33em;
+  font-weight: bold;
 }
 
 p {
   font-size: 12px;
+}
+
+span {
+  color: yellow;
 }
 
 svg {
@@ -38,11 +105,12 @@ svg {
 .icon {
   width: 60px;
   height: 60px;
-  margin: 0 30px;
+  margin: 0 25px;
 }
 
 .heading {
-  width: 330px;
+  width: 320px;
+  margin: 0 20px;
 }
 
 .score-board {
@@ -56,8 +124,7 @@ svg {
 
 .score {
   font-size: 28px;
-  font-weight: bold;
-  padding-top: 10px;
+  padding-top: 5px;
 }
 
 #grid {
